deployment/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-front
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: test-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
